--- a/dct_widgets/updatebox/updatebox.ui
+++ b/dct_widgets/updatebox/updatebox.ui
@@ -191,7 +191,11 @@
        </widget>
       </item>
       <item row="5" column="1">
-       <widget class="QLineEdit" name="letServerGuiVersion"/>
+       <widget class="QLineEdit" name="letServerGuiVersion">
+        <property name="focusPolicy">
+         <enum>Qt::NoFocus</enum>
+        </property>
+       </widget>
       </item>
       <item row="0" column="2">
        <widget class="QPushButton" name="btnCheckFirmwareUpdate">
@@ -216,6 +220,9 @@
       </item>
       <item row="1" column="1">
        <widget class="QLineEdit" name="letServerFirmwareVersion">
+        <property name="focusPolicy">
+         <enum>Qt::NoFocus</enum>
+        </property>
         <property name="readOnly">
          <bool>true</bool>
         </property>
@@ -229,10 +236,17 @@
        </widget>
       </item>
       <item row="4" column="1">
-       <widget class="QLineEdit" name="letCurrentGuiVersion"/>
+       <widget class="QLineEdit" name="letCurrentGuiVersion">
+        <property name="focusPolicy">
+         <enum>Qt::NoFocus</enum>
+        </property>
+       </widget>
       </item>
       <item row="0" column="1">
        <widget class="QLineEdit" name="letCurrentFirmwareVersion">
+        <property name="focusPolicy">
+         <enum>Qt::NoFocus</enum>
+        </property>
         <property name="readOnly">
          <bool>true</bool>
         </property>
