Added new Debug Terminal widget
- Added a debug terminal which shows the communication with the device
  and allows the transmission of debug commands directly over the serial
  port
- Added new function to the serial port classes to connect with the
  debug terminal

--- a/resource/resource.qrc
+++ b/resource/resource.qrc
@@ -156,5 +156,6 @@
         <file>icons/cog-64.png</file>
         <file>icons/cog-32.png</file>
         <file>icons/cog-16.png</file>
+        <file>icons/terminal.png</file>
     </qresource>
 </RCC>
