--- a/dct_widgets/settingsdialog/settingsdialog.ui
+++ b/dct_widgets/settingsdialog/settingsdialog.ui
@@ -354,6 +354,13 @@
         </item>
        </layout>
       </item>
+      <item>
+       <widget class="QPushButton" name="btnShowDebugTerminal">
+        <property name="text">
+         <string>Show Debug Terminal</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
