Changes to the Debug Terminal and the Settings Dialog
- Added a Command History to the Debug Terminal, the user can now use
  the up and down arrows to cycle through the last used commands. The
  history is cleared when "clear terminal" is clicked
- The "save" button in the settins dialog will now automatically apply
  the device name and the serial port settings before saving

--- a/dct_widgets/debugterminal/debugterminal.ui
+++ b/dct_widgets/debugterminal/debugterminal.ui
@@ -92,7 +92,7 @@
      <item>
       <widget class="QPushButton" name="btnClearTerminal">
        <property name="text">
-        <string>Clear Terminal</string>
+        <string>Clear Terminal and History</string>
        </property>
       </widget>
      </item>
@@ -104,6 +104,7 @@
   <tabstop>tbTerminal</tabstop>
   <tabstop>letInput</tabstop>
   <tabstop>sbxWaitTime</tabstop>
+  <tabstop>btnShowHelp</tabstop>
   <tabstop>btnClearTerminal</tabstop>
  </tabstops>
  <resources>
