Changes to the Debug Terminal
- Made receiving answers more robust, increased default timeout to 500ms

--- a/dct_widgets/debugterminal/debugterminal.ui
+++ b/dct_widgets/debugterminal/debugterminal.ui
@@ -62,7 +62,7 @@
      <item>
       <widget class="QLabel" name="lblWaitTime">
        <property name="text">
-        <string>Wait Time in ms</string>
+        <string>Response Wait Time in ms</string>
        </property>
       </widget>
      </item>
