The Debug Terminal is now handled as a dock widget
- The Debug Terminal is now docked to the main window for a cleaner
  look and easier handling
- Still needs some testing / tweaking under windows to work as intended

--- a/application/mainwindow.ui
+++ b/application/mainwindow.ui
@@ -9,9 +9,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>953</width>
-    <height>962</height>
+    <width>946</width>
+    <height>1038</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>ProVideo Color Control</string>
@@ -28,7 +34,7 @@
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
@@ -170,6 +176,12 @@
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <item>
          <widget class="MccEqBox" name="mccEqBox">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="toolTip">
            <string/>
           </property>
