Changed Courier 10 Pitch Font to standard Courier
- Courier 10 Pitch font is not displayed under windows, so standard
  Courier is used instead for the Debug Terminal and the info box

--- a/dct_widgets/debugterminal/debugterminal.ui
+++ b/dct_widgets/debugterminal/debugterminal.ui
@@ -31,8 +31,7 @@
     <widget class="QTextBrowser" name="tbTerminal">
      <property name="font">
       <font>
-       <family>Courier 10 Pitch</family>
-       <pointsize>10</pointsize>
+       <family>Courier</family>
       </font>
      </property>
     </widget>
@@ -54,7 +53,7 @@
     <widget class="QLineEdit" name="letInput">
      <property name="font">
       <font>
-       <family>Courier 10 Pitch</family>
+       <family>Courier</family>
        <pointsize>10</pointsize>
       </font>
      </property>
