--- a/dct_widgets/infobox/infobox.ui
+++ b/dct_widgets/infobox/infobox.ui
@@ -42,7 +42,7 @@
         </property>
         <property name="font">
          <font>
-          <family>Courier 10 Pitch</family>
+          <family>Courier</family>
           <pointsize>10</pointsize>
          </font>
         </property>
@@ -118,7 +118,7 @@
         </property>
         <property name="font">
          <font>
-          <family>Courier 10 Pitch</family>
+          <family>Courier</family>
           <pointsize>10</pointsize>
           <weight>50</weight>
           <bold>false</bold>
@@ -148,7 +148,7 @@
         </property>
         <property name="font">
          <font>
-          <family>Courier 10 Pitch</family>
+          <family>Courier</family>
           <pointsize>10</pointsize>
           <weight>50</weight>
           <bold>false</bold>
@@ -213,7 +213,7 @@
         </property>
         <property name="font">
          <font>
-          <family>Courier 10 Pitch</family>
+          <family>Courier</family>
           <pointsize>10</pointsize>
           <weight>50</weight>
           <bold>false</bold>
@@ -268,7 +268,7 @@
         </property>
         <property name="font">
          <font>
-          <family>Courier 10 Pitch</family>
+          <family>Courier</family>
           <pointsize>10</pointsize>
           <weight>50</weight>
           <bold>false</bold>
@@ -333,7 +333,7 @@
         </property>
         <property name="font">
          <font>
-          <family>Courier 10 Pitch</family>
+          <family>Courier</family>
           <pointsize>10</pointsize>
           <weight>50</weight>
           <bold>false</bold>
@@ -385,7 +385,7 @@
         </property>
         <property name="font">
          <font>
-          <family>Courier 10 Pitch</family>
+          <family>Courier</family>
           <pointsize>10</pointsize>
           <weight>50</weight>
           <bold>false</bold>
@@ -418,7 +418,7 @@
         </property>
         <property name="font">
          <font>
-          <family>Courier 10 Pitch</family>
+          <family>Courier</family>
           <pointsize>10</pointsize>
           <weight>50</weight>
           <bold>false</bold>
@@ -451,7 +451,7 @@
         </property>
         <property name="font">
          <font>
-          <family>Courier 10 Pitch</family>
+          <family>Courier</family>
           <pointsize>10</pointsize>
           <weight>50</weight>
           <bold>false</bold>
@@ -487,7 +487,7 @@
         </property>
         <property name="font">
          <font>
-          <family>Courier 10 Pitch</family>
+          <family>Courier</family>
           <pointsize>10</pointsize>
          </font>
         </property>
@@ -518,7 +518,7 @@
         </property>
         <property name="font">
          <font>
-          <family>Courier 10 Pitch</family>
+          <family>Courier</family>
           <pointsize>10</pointsize>
           <weight>50</weight>
           <bold>false</bold>
@@ -570,7 +570,7 @@
         </property>
         <property name="font">
          <font>
-          <family>Courier 10 Pitch</family>
+          <family>Courier</family>
           <pointsize>10</pointsize>
           <weight>50</weight>
           <bold>false</bold>
@@ -610,7 +610,7 @@
         </property>
         <property name="font">
          <font>
-          <family>Courier 10 Pitch</family>
+          <family>Courier</family>
           <pointsize>10</pointsize>
           <weight>50</weight>
           <bold>false</bold>
@@ -694,7 +694,7 @@
         </property>
         <property name="font">
          <font>
-          <family>Courier 10 Pitch</family>
+          <family>Courier</family>
           <pointsize>10</pointsize>
          </font>
         </property>
