--- a/dct_widgets/debugterminal/debugterminal.ui
+++ b/dct_widgets/debugterminal/debugterminal.ui
@@ -95,9 +95,16 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="btnSaveLog">
+       <property name="text">
+        <string>Save Log File</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="btnClearTerminal">
        <property name="text">
-        <string>Clear Terminal and History</string>
+        <string>Clear Terminal</string>
        </property>
       </widget>
      </item>
